# minitrove

./: .gitignore  README.md  pyproject.toml
databrix/: types.py
databrix/extract/: base.py  extractors.py
databrix/schema/: extract.py  sourcer.py
databrix/sourcer/: base.py  sourcers.py  utils.py
experiments/: benchmark_sourcing.py
minitrove/: __init__.py  types.py
minitrove/extract/: base.py  extractors.py
minitrove/schema/: extract.py  sourcer.py
minitrove/sourcer/: base.py  sourcers.py
tests/: test_extraction.py  test_sourcers.py
tests/fixtures/extract/: generate_testset.py
tests/fixtures/extract/expected/resiliparse/: product.txt  wiki.txt
tests/fixtures/extract/html/: blog.html  product.html  se.html  wiki.html
tests/fixtures/extract/output/resiliparse/: blog.txt  se.txt
tests/fixtures/extract/output/trafilatura/: blog.txt  product.txt  se.txt  wiki.txt
tests/fixtures/sources/compressed/: data.csv.bz2  data.jsonl.xz
tests/fixtures/sources/standard/: data.csv  data.jsonl  sample.txt
