[project]
name = "minitrove"
version = "0.1.0"
description = "A library for processing and preparing data for LLM training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastdiff>=0.3.0",
    "pydantic>=2.11.5",
    "resiliparse>=0.15.2",
    "trafilatura>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.12",
    "ty>=0.0.1a7",
]
