[project]
name = "databrix"
version = "0.1.0"
description = "A library for processing and preparing data for LLM training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastdiff>=0.3.0",
    "fsspec>=2025.5.1",
    "loguru>=0.7.3",
    "orjson>=3.10.18",
    "pydantic>=2.11.5",
    "resiliparse>=0.15.2",
    "trafilatura>=2.0.0",
]

[dependency-groups]
bench = [
    "datasets>=2.14.4",
    "huggingface-hub>=0.32.3",
]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.12",
    "ty>=0.0.1a7",
]
